--- a/prompt_templates/consolidate.j2
+++ b/prompt_templates/consolidate.j2
@@ -1,1 +1,6 @@
+## Eerdere consolidatie pogingen
+mocht er al een geconsolideerde versie bestaan vind je deze hier
+{{geconsolideerde_tekst}}
+
+## Laatste bericht van gebruiker
 {{ query }}
