--- a/prompt_templates/rewrite.j2
+++ b/prompt_templates/rewrite.j2
@@ -1,1 +1,5 @@
+# Dit is de geconsolideerde informatie die je mag gebuiken voor het beantwoorden van de Hoofdvraag en mogelijke subvragen
+{{geconsolideerde_tekst}}
+
+## Laatste bericht van gebruiker
 {{query}}
